<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/info_test">

     <Preference android:key="device_model" 
             style="?android:preferenceInformationStyle"
             android:title="@string/model_number"
             android:summary="@string/device_info_default"/>

    <Preference
        style="?android:preferenceInformationStyle"
        android:key="cpu"
        android:summary="@string/device_info_default"
        android:title="@string/cpu_title" />

    <Preference
        style="?android:preferenceInformationStyle"
        android:key="ram"
        android:summary="@string/device_info_default"
        android:title="@string/memory" />


    <Preference
        style="?android:preferenceInformationStyle"
        android:key="internal_storage"
        android:summary="@string/device_info_default"
        android:title="@string/phone_storage" />

    <Preference
        style="?android:preferenceInformationStyle"
        android:key="resolution"
        android:summary="@string/device_info_default"
        android:title="@string/resolution_title" />

        <Preference android:key="firmware_version" 
                style="?android:preferenceInformationStyle"
                android:title="@string/firmware_version"
                android:summary="@string/device_info_default"/>
                
        <Preference android:key="emui_version" 
                style="?android:preferenceInformationStyle"
                android:title="@string/emui_version"
                android:summary="@string/device_info_default"/>

        <Preference android:key="baseband_version" 
                style="?android:preferenceInformationStyle"
                android:title="@string/baseband_version"
                android:summary="@string/device_info_default"/>
        
        <!-- Device Kernel version -->
        <Preference android:key="kernel_version" 
                style="?android:preferenceInformationStyle"
                android:title="@string/kernel_version"
                android:summary="@string/device_info_default"/>

        <!-- Detailed build version -->
        <Preference android:key="build_number" 
                style="?android:preferenceInformationStyle"
                android:title="@string/build_number"
                android:summary="@string/device_info_default"/>
        <!-- DTS2012071401041 zhangyafeng 20120714 begin -->
        <Preference android:key="hardware_version"
                style="?android:preferenceInformationStyle"
                android:title="@string/hardware_number"
                android:summary="@string/device_info_default"/>
        <!-- DTS2012071401041 zhangyafeng 20120714 end -->

        <PreferenceScreen android:key="status_info"
                android:title="@string/device_status" 
                android:summary="@string/device_status_summary">
        </PreferenceScreen>
        
</PreferenceScreen>
