<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
        <PreferenceCategory 
        android:title="@string/pref_ap_title"
        android:key="pref_ap_setting"
        >
        <EditTextPreference 
            android:key="pref_key_ap_ssid"
            android:title="@string/pref_title_ap_ssid"
            android:summary="@string/pref_summary_ap_ssid"
            />
        <EditTextPreference 
            android:key="pref_key_ap_password"
            android:title="@string/pref_title_ap_password"
            android:summary="@string/pref_summary_ap_password"
            />
        <ListPreference 
            android:key="pref_key_ap_type"
            android:title="@string/pref_title_ap_type"
            android:summary="@string/pref_summary_ap_password"
   			android:entries="@array/ap_type"
   			android:entryValues="@array/storage_ap_type"
            />
    </PreferenceCategory>

</PreferenceScreen>
