<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mScrollView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/allNetWork"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_network" />

        <Button
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop" />

        <Button
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check" />

        <Button
            android:id="@+id/cpuRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cpuRate"
            android:text="@string/cpu_rate" />

        <Button
            android:id="@+id/wifiInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="wifiInfo"
            android:text="@string/wifi_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
             >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SSID" />

            <EditText
                android:id="@+id/ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="wd"
                
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="类型" />

            <Spinner
                android:id="@+id/protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="密码" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12345678"
                 />

            <Button
                android:id="@+id/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect" />
            <Button
            android:id="@+id/disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect" />
        </LinearLayout>



        <Button
            android:id="@+id/openAp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_ap" />

        <Button
            android:id="@+id/closeAp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_ap" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="次數" />

            <EditText
                android:id="@+id/num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="10"
                 />

            <Button
                android:id="@+id/autoWifiTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_wifi_test" />

            <Button
                android:id="@+id/autoApTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_ap_test" />
            <Button 
                android:id="@+id/stopService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_service"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>