<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginTop="5dp"
    >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleepwake_title"
        android:textSize="20dp"
        />
    
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/blue"
        android:layout_alignParentBottom="true"
        />
    
    <Button 
        android:id="@+id/btnActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleepwake_activityDevice"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        
        <EditText 
            android:id="@+id/etInput"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="3000"
            />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        
        <Button 
	        android:id="@+id/btnStart"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnStart"/>
    
	    <Button 
	        android:id="@+id/btnStop"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/bntStop"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="30dp"
        >
	    
        <ImageView 
	        android:layout_width="match_parent"
	        android:layout_height="1px"
	        android:background="@drawable/blue"
	        android:layout_alignParentBottom="true"
	        />
    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sleepwake_tips"
	        />
	    
    </LinearLayout>

</LinearLayout>